Update 1 ads integration

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Privacy Policy</h1>
 
-    <p>Last Updated: 2023-10-04</p>
+    <p>Last Updated: 2024-10-04</p>
 
     <p>Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services. Please read this Privacy Policy carefully before using our website or services.</p>
 
@@ -18,9 +18,9 @@
     <p>We may collect both personally identifiable information and non-personally identifiable information when you use our website or services. This information may include, but is not limited to:</p>
 
     <ul>
-        <li>Your name</li>
-        <li>Your email address</li>
-        <li>Your phone number</li>
+        <li>XYZ</li>
+        <li>xyz.com.np</li>
+        <li>7848......</li>
         <li>Information about your device and browser</li>
         <li>Log data, such as your IP address, the pages you visit, and the time and date of your visit</li>
     </ul>
@@ -56,7 +56,7 @@
 
     <h2>Contact Us</h2>
 
-    <p>If you have any questions or concerns about our Privacy Policy, please contact us at x.for@gmail.com.</p>
+    <p>If you have any questions or concerns about our Privacy Policy, please contact us at x123.for@gmail.com.</p>
 
 </body>
 
